Moved back family endpoints and logic to user, and remove DELETE and POST endpoints due to forum messages
